--- a/README
+++ b/README
@@ -14,6 +14,7 @@ Projects
 --------
 Lerobot_RM_Phase1/    IMU-only @ 500Hz (validated)
 Lerobot_RM_Phase2/    IMU + Servo with Seqlock (validated)
+Lerobot_RM_Phase3/    Full multirate realtime control and data aquistion stack
 adafruit_ism330dhcx_test/    IMU test sketch
 feetech_servo_timing_test/   Servo timing test
 
